--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.7",
     "firebase": "^8.7.1",
     "ical-generator": "^3.5.2",
     "moment": "^2.29.3",
     "nodemailer": "^6.7.8",
     "nprogress": "^0.2.0",
+    "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-confetti": "^6.1.0",
@@ -27,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
     "react-use": "^17.4.0",
+    "tailwindcss": "^3.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
