--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
-    "@mui/x-date-pickers": "file:@mui/x-date-pickers5.0.0-alpha.7",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
